tests/gabc-dump/should-fail/unopened-slur.gabc
name: unopened slur;
%%
(c4) g(g[oslur:2}]) (::)
